# treelite

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt
.github/workflows/: coverage-tests.yml  linux-wheel-builder.yml  macos-wheel-builder.yml  misc-tests.yml  pre-commit.yml  windows-wheel-builder.yml
cmake/: ExternalLibs.cmake
docs/tutorials/: edit.rst
include/treelite/: model_builder.h
ops/: build-windows.bat  test-win-python-wheel.bat  win-python-coverage.bat
ops/conda_env/: dev.yml
python/: pyproject.toml
python/treelite/gtil/: gtil.py
python/treelite/sklearn/: importer.py
src/: json_serializer.cc  model_concat.cc
src/c_api/: model.cc
src/gtil/: predict.cc
src/model_builder/: model_builder.cc
src/model_loader/: xgboost_json.cc
tests/cpp/: test_gtil.cc  test_serializer.cc
tests/python/: test_lightgbm_integration.py  test_xgboost_integration.py
